--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
